pcap-writer from rstracers stops working after refactor in tracers
Describe your issue
pcap-writer
trace doesn't work after gstreamer!8086 (merged)
Observed Behavior
- No
target-factory
orpad-path
parameters in the output ofgst-inspect-1.0 pcap-writer
Setup
- Operating System: Arch Linux
- Device: Computer
-
gst-plugins-rs Version: main (commit
81ff6646
) -
GStreamer Version: main (
f39812dc8f
)
Steps to reproduce the bug
$ rm -rf tracer_pcaps/
$ GST_DEBUG=2 GST_TRACERS="pcap-writer(target-factory=rtph264pay)" gst-launch-1.0 --gst-plugin-load=/home/rgonzalez/src/gitlab.freedesktop.org/gstreamer/gst-plugins-rs/target/debug/libgstrstracers.so videotestsrc num-buffers=15 ! x264enc tune=zerolatency ! video/x-h264,prof
ile=constrained-baseline ! rtph264pay seqnum-offset=0 ! rtph264depay ! fakesink
0:00:00.017616984 743749 0x5c32b8a192d0 WARN structure gststructure.c:3287:gst_structure_parse_field: missing assignment operator in the field, str=pcap-writer
0:00:00.017636771 743749 0x5c32b8a192d0 WARN structure gststructure.c:3387:priv_gst_structure_parse_fields: Failed to parse field, r=pcap-writer
0:00:00.017644952 743749 0x5c32b8a192d0 WARN pcap-writer utils/tracers/src/pcap_writer/imp.rs:102:gstrstracers::pcap_writer::imp::Settings::update_from_params:<pcapwriter0> failed to parse tracer parameters: Failed to parse structure from string
0:00:00.017649549 743749 0x5c32b8a192d0 WARN pcap-writer utils/tracers/src/pcap_writer/imp.rs:222:<gstrstracers::pcap_writer::imp::PcapWriter as glib::subclass::object::ObjectImpl>::constructed:<pcapwriter0> 'pcap-writer' enabled without specifying 'target-factory' or 'pad-path' parameters. Not writing pcaps.
$ stat "./tracer_pcaps/pipeline0>rtph264pay0>src.pcap"
stat: cannot statx './tracer_pcaps/pipeline0>rtph264pay0>src.pcap': No such file or directory
File ./tracer_pcaps/pipeline0>rtph264pay0>src.pcap
doesn't exist.
How reproducible is the bug?
- Version 1.24.10 works.
- Commit
18d83192
works (before gstreamer!8086 (merged)) - Commit
b08b49d548
fails (after gstreamer!8086 (merged)) - Main (
f39812dc8f
) fails.
Notes
I like changes done in gstreamer!8086 (merged).
Edited by Rubén Gonzalez