tracers: Fix issue in the BC layer added in refactor to simplify params handling

Issue added in refactor done in commit 5e18499372, which includes a
logic to not break the backward compatibility. Issue found with Rust
pcap-writer tracer, fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/issues/644

Part-of: <https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/8248>